--- a/main/res/layout/activity_scrolling.xml
+++ b/main/res/layout/activity_scrolling.xml
@@ -9,23 +9,19 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
-        android:layout_width="71dp"
-        android:layout_height="65dp"
-        android:layout_gravity="bottom|left|start|end"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|start|end"
         android:clickable="true"
         android:layout_alignParentBottom="true"
         android:tint="@android:color/background_light"
         app:backgroundTint="@android:color/holo_green_dark"
-        app:fabSize="mini"
+        app:fabSize="normal"
         app:layout_anchor="@+id/include"
-        app:layout_anchorGravity="center_vertical|bottom|right"
+        app:layout_anchorGravity="bottom|right"
         app:rippleColor="@android:color/background_dark"
         app:srcCompat="@android:drawable/ic_input_add"
         />
-
-    <include
-        android:id="@+id/include"
-        layout="@layout/content_scrolling" />
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
@@ -51,5 +47,9 @@
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
+
+    <include
+        android:id="@+id/include"
+        layout="@layout/content_scrolling" />
 
 </android.support.design.widget.CoordinatorLayout>
