--- a/main/res/layout/addview.xml
+++ b/main/res/layout/addview.xml
@@ -2,7 +2,32 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/deny"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom|start"
+        android:clickable="true"
+        android:tint="@android:color/background_light"
+        app:backgroundTint="@android:color/holo_red_dark"
+        app:fabSize="normal"
+        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/confirm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:clickable="true"
+        android:layout_alignParentBottom="true"
+        android:tint="@android:color/background_light"
+        app:backgroundTint="@android:color/holo_green_dark"
+        app:fabSize="normal"
+        app:srcCompat="@android:drawable/ic_input_add" />
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -11,93 +36,36 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:layout_scrollFlags="scroll|enterAlways"
-            app:title="@string/app_name">
-        </android.support.v7.widget.Toolbar>
+            app:title="@string/app_name"/>
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_scrollFlags="scroll|enterAlways"
-            app:tabMode="scrollable">
+            android:layout_height="wrap_content">
 
             <android.support.design.widget.TabItem
+                android:id="@+id/entryTab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Entry" />
 
             <android.support.design.widget.TabItem
+                android:id="@+id/groupTab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Group" />
         </android.support.design.widget.TabLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.widget.NestedScrollView
+    <include
+        android:id="@id/include"
+        layout="@layout/add_view_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
+        android:layout_height="wrap_content"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:id="@+id/linearLayout">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:id="@+id/name"
-                        android:layout_width="168dp"
-                        android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:text="Name:"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                        android:textSize="24sp" />
-
-                    <EditText
-                        android:id="@+id/editName"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:hint="Enter Name"
-                        android:inputType="textPersonName" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:id="@+id/quantity"
-                        android:layout_width="167dp"
-                        android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:text="Quantity: "
-                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                        android:textSize="24sp" />
-
-                    <EditText
-                        android:id="@+id/editQuant"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:hint="Enter Quantity"
-                        android:inputType="numberSigned" />
-
-                </LinearLayout>
-            </LinearLayout>
-
-        </RelativeLayout>
-    </android.support.v4.widget.NestedScrollView>
 </android.support.design.widget.CoordinatorLayout>
